Iterate on abstract, ready the project to go public

--- a/article/sections/abstract.tex
+++ b/article/sections/abstract.tex
@@ -2,4 +2,6 @@
 
 % Bow to our chatgpt overlords:
 
-In this working paper, we introduce a novel Self-Sovereign Money System (SSMS) designed to address the financial instability inherent to the existing Fractional Reserve Banking (xRB) system, while also mitigating concerns regarding loan pricing and availability associated with alternative systems such as Full Reserve Banking (FRB), Sovereign Money System (SMS), and cryptocurrencies. The proposed system operates through a native currency, the Self-Sovereign Token (SST), interchangeable with a Central Bank Digital Currency (CBDC). Loans are facilitated by pooling savers' SST and generating new SST when necessary to meet loan demand. Savers, including the system itself, obtain proportional ownership of the loan pool, represented by a Pooled Debt Token (PDT). The PDT acts as a pass-through mechanism, distributing repayments with interest to its holders, while the system burns all its repayments to counteract inflation. The PDT's value in SST is autonomously, continuously, and transparently determined based on underlying loan variables, addressing the critical shortcomings of Collateralized Debt Obligations, the traditional instruments to pool loans that caused the financial crisis of 2008. The system can also stabilize market prices, similar to a central bank's function. Savers can sell their PDT to withdraw savings, eliminating bank-run risks. The system can create new SSTs in exchange for PDTs to ensure continuous instant liquidity. Moreover, interest rates are also autonomously adjusted to promote stable economic growth equal to nominal GDP growth of 3\%. The working paper presents the theory and a prototype implementation of this system, applicable to both sovereign nations and decentralized global economies.
+%In this working paper, we introduce a novel Self-Sovereign Money System (SSMS) designed to address the financial instability inherent to the existing Fractional Reserve Banking (xRB) system, while also mitigating concerns regarding loan pricing and availability associated with alternative systems such as Full Reserve Banking (FRB), Sovereign Money System (SMS), and cryptocurrencies. The proposed system operates through a native currency, the Self-Sovereign Token (SST), interchangeable with a Central Bank Digital Currency (CBDC). Loans are facilitated by pooling savers' SST and generating new SST when necessary to meet loan demand. Savers, including the system itself, obtain proportional ownership of the loan pool, represented by a Pooled Debt Token (PDT). The PDT acts as a pass-through mechanism, distributing repayments with interest to its holders, while the system burns all its repayments to counteract inflation. The PDT's value in SST is autonomously, continuously, and transparently determined based on underlying loan variables, addressing the critical shortcomings of Collateralized Debt Obligations, the traditional instruments to pool loans that caused the financial crisis of 2008. The system can also stabilize market prices, similar to a central bank's function. Savers can sell their PDT to withdraw savings, eliminating bank-run risks. The system can create new SSTs in exchange for PDTs to ensure continuous instant liquidity. Moreover, interest rates are also autonomously adjusted to promote stable economic growth equal to nominal GDP growth of 3\%. The working paper presents the theory and a prototype implementation of this system, applicable to both sovereign nations and decentralized global economies.
+
+This working paper introduces a novel Self-Sovereign Money System (SSMS) designed to address the financial instability inherent to the existing Fractional Reserve Banking (xRB) system while also mitigating concerns regarding loan pricing and availability associated with alternative systems such as Full Reserve Banking (FRB), Sovereign Money System (SMS), and Decentralized Finance (DeFi). The proposed system achieves sufficient maturity transformation, that is, matching short-term savings to fund long-term debts, by allowing savers to sell the debt they funded in the market or directly to the system, thus eliminating the possibility of bank runs. The entire system is transparently defined and autonomously executed through the use of blockchain technology, where the governing body can be a Sovereign entity such as a Central Bank or a decentralized entity such as a Decentralized Autonomous Organisation (DAO). The proposed system operates through a native currency, the Self-Sovereign Token (SST), interchangeable with a Central Bank Digital Currency (CBDC). Loans are facilitated by pooling savers' SST and generating new SST when necessary to meet loan demand. Savers, including the system itself, obtain proportional ownership of the loan pool, represented by a Pooled Debt Token (PDT). The PDT acts as a pass-through mechanism, distributing repayments with interest to its holders, while the system burns all its repayments to counteract inflation. The PDT's value in SST is autonomously, continuously, and transparently determined based on external market forces and underlying loan variables, addressing the critical shortcomings of Collateralized Debt Obligations, the traditional instruments to pool loans that caused the financial crisis of 2008. The system can also stabilize market prices, similar to a central bank's function. Savers can sell their PDT to withdraw savings, eliminating bank-run risks. Moreover, interest rates are also autonomously adjusted to promote stable economic growth equal to nominal GDP growth of 3\%. The working paper presents the theory and a prototype implementation of this system, applicable to both sovereign nations and decentralized global economies.
