--- a/article/thesis.tex
+++ b/article/thesis.tex
@@ -7,7 +7,7 @@
 \usepackage{babel,csquotes,xpatch}% recommended
 
 
-\title{[DRAFT Working Paper] Towards a (Self) Soverign Money System promoting financial stability and economic crowth equivialant to fractional reserve banking}
+\title{[DRAFT Working Paper] Towards a (Self) Sovereign Money System promoting financial stability and economic growth equivalent to fractional reserve banking}
 \author{Kim Aksel Tahuil Borgen}
 \date{\today}
 \addbibresource{thesis.bib}
