--- a/article/thesis.bib
+++ b/article/thesis.bib
@@ -133,3 +133,26 @@ month = {},
 year = {},
 note = {(Accessed on 03/22/2023)}
 }
+
+@book{fabozzi2008introduction,
+  title={Introduction to securitization},
+  author={Fabozzi, Frank J and Kothari, Vinod},
+  year={2008},
+  publisher={John Wiley \& Sons}
+}
+
+@misc{FaceValueMBS,
+author = {CFI Team},
+title = {Current Face - Overview, Mortgage-Backed Securities, \& Formula},
+howpublished = {\url{https://corporatefinanceinstitute.com/resources/fixed-income/current-face/}},
+month = {2},
+year = {2023},
+note = {(Accessed on 03/24/2023)}
+}
+
+@phdthesis{tang2015valuation,
+  title={Valuation of Mortgage Backed Securities with Prepayment using BDT Model and Monte Carlo Methods},
+  author={Tang, Yuxiao},
+  year={2015},
+  school={WORCESTER POLYTECHNIC INSTITUTE}
+}
