Add system interest rate calc on dc.new and dc.pay, consolelog negative SDs

--- a/article/sections/derivation.tex
+++ b/article/sections/derivation.tex
@@ -131,7 +131,7 @@ At the end of the cycle $\tau_{n}$, the new total money supply will be given by
 Now we can derive a simple formula for the interest rate
 
 \begin{equation}
-    IR_{\tau_{n}} = IR_{\tau_{n-1}} + \frac{M_{\tau_{n_{target}}}}{M_{\tau_{n}}} - 1
+    IR_{\tau_{n}} = IR_{\tau_{n-1}} - \frac{M_{\tau_{n_{target}}}}{M_{\tau_{n}}} - 1
 \end{equation}
 
 In practice the formula for interest rate should be much more complex, and modelled thourougly. However we now have a starting point. To model a good formula we must know every aspect that is impacted by changing the interest rate. Such as the formula for calcultating the value of the debt contracts.
