--- a/article/sections/derivation.tex
+++ b/article/sections/derivation.tex
@@ -153,7 +153,7 @@ RD is the Remaining Duration in $\tau$
 The value of the pool of debt is the sum of all PVs 
 
 \begin{equation}
-    PV_{PDC} = \sum_{0}^{N} PV_{DC_{n}}}
+    PV_{PDC} = \sum_{0}^{N} PV_{DC_{n}}
 \end{equation}
 
 If you update the present value of the PDC each time you update the present value of a debt contract
